[package]
name = "assignment2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "birthday_party"
path = "src/birthday_party.rs"
test = false

[[bin]]
name = "crystal_vase"
path = "src/crystal_vase.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
